<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context="com.aula.lanfranchi.areacalculator1.Tab2Activity"
    android:gravity="right|center_vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sec"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textSize="25sp"
            android:layout_weight="6"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            android:layout_weight="6"
            android:id="@+id/form"
            />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        >

        <TextView
            android:id="@+id/textRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radius"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radiusValue"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/textBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base"
            android:textSize="20sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/baseValue"/>

        <TextView
            android:id="@+id/textHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="20sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/heightValue"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="147dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="8dp"

        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/btn_next"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"

        />

</LinearLayout>
